// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Layout Processors > Legacy API (deprecated) > should process legacy layout API and attach warnings > legacy-layout 1`] = `
"
// Generated SCSS Mixins
@mixin legacyhorizontalframe {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  gap: 0.625rem;
  padding: 1.25rem;
  background: #f2f2f2;
  width: 12.5rem;
  height: 6.25rem;
}
@mixin legacyverticalframe {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 0.625rem;
  padding: 1rem;
  background: #e6f2ff;
  width: 9.375rem;
  height: 11.25rem;
}
"
`;

exports[`Layout Processors > New API (layoutSizingHorizontal/Vertical) > should process new layout API correctly > new-layout 1`] = `
"
// Generated SCSS Mixins
@mixin framefixed {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  gap: 0.625rem;
  padding: 1.25rem;
  background: #e6e6e6;
  width: 12.5rem;
  height: 6.25rem;
}
@mixin framefill {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 0.625rem;
  padding: 1rem;
  background: #e6f2ff;
  width: 100%;
  height: 100%;
}
@mixin framehug {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  gap: 0.625rem;
  padding: 1rem;
  background: #fff2e6;
  width: fit-content;
  height: fit-content;
}
"
`;

exports[`Layout Processors > should process layout alignment correctly > alignment 1`] = `
"// Primitive SCSS Variables
$brand-primary: #00464a;
$teal-dark: #00464a;
$teal-800: #00464a;

// Generated SCSS Mixins
@mixin alignment-bottom-left {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
}
@mixin alignment-bottom-left-object-1 {
  background: $brand-primary;
}
@mixin alignment-bottom-left-object-2 {
  background: $brand-primary;
}
@mixin alignment-bottom-left-object-3 {
  background: $brand-primary;
}
@mixin alignment-bottom-center {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin alignment-bottom-center-object-1 {
  background: $brand-primary;
}
@mixin alignment-bottom-center-object-2 {
  background: $brand-primary;
}
@mixin alignment-bottom-center-object-3 {
  background: $brand-primary;
}
@mixin alignment-bottom-right {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: flex-end;
}
@mixin alignment-bottom-right-object-1 {
  background: $brand-primary;
}
@mixin alignment-bottom-right-object-2 {
  background: $brand-primary;
}
@mixin alignment-bottom-right-object-3 {
  background: $brand-primary;
}
@mixin alignment-center-left {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
}
@mixin alignment-center-left-object-1 {
  background: $brand-primary;
}
@mixin alignment-center-left-object-2 {
  background: $brand-primary;
}
@mixin alignment-center-left-object-3 {
  background: $brand-primary;
}
@mixin alignment-center-center {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin alignment-center-center-object-1 {
  background: $brand-primary;
}
@mixin alignment-center-center-object-2 {
  background: $brand-primary;
}
@mixin alignment-center-center-object-3 {
  background: $brand-primary;
}
@mixin alignment-center-right {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: flex-end;
}
@mixin alignment-center-right-object-1 {
  background: $brand-primary;
}
@mixin alignment-center-right-object-2 {
  background: $brand-primary;
}
@mixin alignment-center-right-object-3 {
  background: $brand-primary;
}
@mixin alignment-top-left {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
}
@mixin alignment-top-left-object-1 {
  background: $brand-primary;
}
@mixin alignment-top-left-object-2 {
  background: $brand-primary;
}
@mixin alignment-top-left-object-3 {
  background: $brand-primary;
}
@mixin alignment-top-center {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin alignment-top-center-object-1 {
  background: $brand-primary;
}
@mixin alignment-top-center-object-2 {
  background: $brand-primary;
}
@mixin alignment-top-center-object-3 {
  background: $brand-primary;
}
@mixin alignment-top-right {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: flex-end;
}
@mixin alignment-top-right-object-1 {
  background: $brand-primary;
}
@mixin alignment-top-right-object-2 {
  background: $brand-primary;
}
@mixin alignment-top-right-object-3 {
  background: $brand-primary;
}
"
`;

exports[`Layout Processors > should process layout alignment correctly > alignment 2`] = `
"// Primitive SCSS Variables
$brand-primary: #00464a;
$teal-dark: #00464a;
$teal-800: #00464a;

// Generated SCSS Mixins
@mixin alignment-bottom-left {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
}
@mixin alignment-bottom-left-object-1 {
  background: $brand-primary;
}
@mixin alignment-bottom-left-object-2 {
  background: $brand-primary;
}
@mixin alignment-bottom-left-object-3 {
  background: $brand-primary;
}
@mixin alignment-bottom-center {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin alignment-bottom-center-object-1 {
  background: $brand-primary;
}
@mixin alignment-bottom-center-object-2 {
  background: $brand-primary;
}
@mixin alignment-bottom-center-object-3 {
  background: $brand-primary;
}
@mixin alignment-bottom-right {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: flex-end;
}
@mixin alignment-bottom-right-object-1 {
  background: $brand-primary;
}
@mixin alignment-bottom-right-object-2 {
  background: $brand-primary;
}
@mixin alignment-bottom-right-object-3 {
  background: $brand-primary;
}
@mixin alignment-center-left {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
}
@mixin alignment-center-left-object-1 {
  background: $brand-primary;
}
@mixin alignment-center-left-object-2 {
  background: $brand-primary;
}
@mixin alignment-center-left-object-3 {
  background: $brand-primary;
}
@mixin alignment-center-center {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin alignment-center-center-object-1 {
  background: $brand-primary;
}
@mixin alignment-center-center-object-2 {
  background: $brand-primary;
}
@mixin alignment-center-center-object-3 {
  background: $brand-primary;
}
@mixin alignment-center-right {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: flex-end;
}
@mixin alignment-center-right-object-1 {
  background: $brand-primary;
}
@mixin alignment-center-right-object-2 {
  background: $brand-primary;
}
@mixin alignment-center-right-object-3 {
  background: $brand-primary;
}
@mixin alignment-top-left {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
}
@mixin alignment-top-left-object-1 {
  background: $brand-primary;
}
@mixin alignment-top-left-object-2 {
  background: $brand-primary;
}
@mixin alignment-top-left-object-3 {
  background: $brand-primary;
}
@mixin alignment-top-center {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin alignment-top-center-object-1 {
  background: $brand-primary;
}
@mixin alignment-top-center-object-2 {
  background: $brand-primary;
}
@mixin alignment-top-center-object-3 {
  background: $brand-primary;
}
@mixin alignment-top-right {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: flex-end;
}
@mixin alignment-top-right-object-1 {
  background: $brand-primary;
}
@mixin alignment-top-right-object-2 {
  background: $brand-primary;
}
@mixin alignment-top-right-object-3 {
  background: $brand-primary;
}
"
`;

exports[`Layout Processors > should process layout direction correctly > direction 1`] = `
"// Primitive SCSS Variables
$brand-primary: #00464a;
$teal-dark: #00464a;
$teal-800: #00464a;

// Generated SCSS Mixins
@mixin vertical-layout {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin vertical-layout-object-1 {
  background: $brand-primary;
}
@mixin vertical-layout-object-2 {
  background: $brand-primary;
}
@mixin vertical-layout-object-3 {
  background: $brand-primary;
}
@mixin horizontal-layout {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
}
@mixin horizontal-layout-object-1 {
  background: $brand-primary;
}
@mixin horizontal-layout-object-2 {
  background: $brand-primary;
}
@mixin horizontal-layout-object-3 {
  background: $brand-primary;
}
@mixin wrapped-layout {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
}
@mixin wrapped-layout-object-1 {
  background: $brand-primary;
}
@mixin wrapped-layout-object-2 {
  background: $brand-primary;
}
@mixin wrapped-layout-object-3 {
  background: $brand-primary;
}
"
`;

exports[`Layout Processors > should process layout direction correctly > direction 2`] = `
"// Primitive SCSS Variables
$brand-primary: #00464a;
$teal-dark: #00464a;
$teal-800: #00464a;

// Generated SCSS Mixins
@mixin vertical-layout {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin vertical-layout-object-1 {
  background: $brand-primary;
}
@mixin vertical-layout-object-2 {
  background: $brand-primary;
}
@mixin vertical-layout-object-3 {
  background: $brand-primary;
}
@mixin horizontal-layout {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
}
@mixin horizontal-layout-object-1 {
  background: $brand-primary;
}
@mixin horizontal-layout-object-2 {
  background: $brand-primary;
}
@mixin horizontal-layout-object-3 {
  background: $brand-primary;
}
@mixin wrapped-layout {
  display: flex;
  flex-direction: row;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
}
@mixin wrapped-layout-object-1 {
  background: $brand-primary;
}
@mixin wrapped-layout-object-2 {
  background: $brand-primary;
}
@mixin wrapped-layout-object-3 {
  background: $brand-primary;
}
"
`;

exports[`Layout Processors > should process layout height correctly > height 1`] = `
"// Primitive SCSS Variables
$brand-primary: #00464a;
$teal-dark: #00464a;
$teal-800: #00464a;

// Generated SCSS Mixins
@mixin height-hug {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin height-hug-object-1 {
  background: $brand-primary;
}
@mixin height-fill-container {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin height-fill-container-object-1 {
  background: $brand-primary;
}
@mixin height-fixed-height {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin height-fixed-height-object-1 {
  background: $brand-primary;
}
@mixin min-height-custom {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin min-height-custom-object-1 {
  background: $brand-primary;
}
@mixin min-height-variable {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin min-height-variable-object-1 {
  background: $brand-primary;
}
@mixin max-height-custom {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin max-height-custom-object-1 {
  background: $brand-primary;
}
@mixin max-height-variable {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin max-height-variable-object-1 {
  background: $brand-primary;
}
"
`;

exports[`Layout Processors > should process layout height correctly > height 2`] = `
"// Primitive SCSS Variables
$brand-primary: #00464a;
$teal-dark: #00464a;
$teal-800: #00464a;

// Generated SCSS Mixins
@mixin height-hug {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin height-hug-object-1 {
  background: $brand-primary;
}
@mixin height-fill-container {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin height-fill-container-object-1 {
  background: $brand-primary;
}
@mixin height-fixed-height {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin height-fixed-height-object-1 {
  background: $brand-primary;
}
@mixin min-height-custom {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin min-height-custom-object-1 {
  background: $brand-primary;
}
@mixin min-height-variable {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin min-height-variable-object-1 {
  background: $brand-primary;
}
@mixin max-height-custom {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin max-height-custom-object-1 {
  background: $brand-primary;
}
@mixin max-height-variable {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin max-height-variable-object-1 {
  background: $brand-primary;
}
"
`;

exports[`Layout Processors > should process layout width correctly > width 1`] = `
"// Primitive SCSS Variables
$size-48: 3rem;
$brand-primary: #00464a;
$spacing-9: 3rem;
$teal-dark: #00464a;
$teal-800: #00464a;
$size-16: 1rem;
$spacing-5: 1rem;

// Generated SCSS Mixins
@mixin min-width-variable {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
  min-width: $size-48;
}
@mixin min-width-variable-object-1 {
  background: $brand-primary;
  min-width: $size-16;
}
@mixin max-width-variable {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
  max-width: $size-48;
}
@mixin max-width-variable-object-1 {
  background: $brand-primary;
  max-width: $size-16;
}
@mixin width-hug {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin width-hug-object-1 {
  background: $brand-primary;
}
@mixin width-fill-container {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin width-fill-container-object-1 {
  background: $brand-primary;
}
@mixin width-fixed-width {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin width-fixed-width-object-1 {
  background: $brand-primary;
}
@mixin min-width-custom {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin min-width-custom-object-1 {
  background: $brand-primary;
}
@mixin max-width-custom {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin max-width-custom-object-1 {
  background: $brand-primary;
}
"
`;

exports[`Layout Processors > should process layout width correctly > width 2`] = `
"// Primitive SCSS Variables
$size-48: 3rem;
$brand-primary: #00464a;
$spacing-9: 3rem;
$teal-dark: #00464a;
$teal-800: #00464a;
$size-16: 1rem;
$spacing-5: 1rem;

// Generated SCSS Mixins
@mixin min-width-variable {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
  min-width: $size-48;
}
@mixin min-width-variable-object-1 {
  background: $brand-primary;
  min-width: $size-16;
}
@mixin max-width-variable {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
  max-width: $size-48;
}
@mixin max-width-variable-object-1 {
  background: $brand-primary;
  max-width: $size-16;
}
@mixin width-hug {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin width-hug-object-1 {
  background: $brand-primary;
}
@mixin width-fill-container {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin width-fill-container-object-1 {
  background: $brand-primary;
}
@mixin width-fixed-width {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin width-fixed-width-object-1 {
  background: $brand-primary;
}
@mixin min-width-custom {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin min-width-custom-object-1 {
  background: $brand-primary;
}
@mixin max-width-custom {
  display: flex;
  flex-direction: column;
  gap: 1.25rem;
  padding: 0rem;
  background: #ffffff;
  justify-content: center;
}
@mixin max-width-custom-object-1 {
  background: $brand-primary;
}
"
`;
